Working on a fix for context info(https://github.com/Auties00/WhatsappWeb4j/issues/132) Fixed https://github.com/Auties00/WhatsappWeb4j/issues/131 Maybe fixed https://github.com/Auties00/WhatsappWeb4j/issues/133 ??? Some minor improvements